--- a/notebooks/chap01.ipynb
+++ b/notebooks/chap01.ipynb
@@ -93,7 +93,15 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded gss_bayes.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the data file\n",
     "\n",
@@ -127,12 +135,144 @@
      "shell.execute_reply": "2021-04-16T19:35:09.081454Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>polviews</th>\n",
+       "      <th>partyid</th>\n",
+       "      <th>indus10</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>caseid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4970.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2670.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6870.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7860.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        year   age  sex  polviews  partyid  indus10\n",
+       "caseid                                             \n",
+       "1       1974  21.0    1       4.0      2.0   4970.0\n",
+       "2       1974  41.0    1       5.0      0.0   9160.0\n",
+       "5       1974  58.0    2       6.0      1.0   2670.0\n",
+       "6       1974  30.0    1       5.0      4.0   6870.0\n",
+       "7       1974  48.0    1       5.0      4.0   7860.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "gss = pd.read_csv('gss_bayes.csv', index_col=0)\n",
     "gss.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 49290 entries, 1 to 2867\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   year      49290 non-null  int64  \n",
+      " 1   age       49290 non-null  float64\n",
+      " 2   sex       49290 non-null  int64  \n",
+      " 3   polviews  49290 non-null  float64\n",
+      " 4   partyid   49290 non-null  float64\n",
+      " 5   indus10   49290 non-null  float64\n",
+      "dtypes: float64(4), int64(2)\n",
+      "memory usage: 2.6 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "gss.info()"
    ]
   },
   {
@@ -155,7 +295,7 @@
     "\n",
     "* `partyid`: Political party affiliation, Democrat, Independent, or Republican.\n",
     "\n",
-    "* `indus10`: [Code](https://www.census.gov/cgi-bin/sssd/naics/naicsrch?chart=2007) for the industry the respondent works in.\n",
+    "* `indus10`: [Code](https://www.census.gov/naics/?58967?yearbck=2007) for the industry the respondent works in.\n",
     "\n",
     "Let's look at these variables in more detail, starting with `indus10`."
    ]
@@ -171,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.085579Z",
@@ -180,9 +320,26 @@
      "shell.execute_reply": "2021-04-16T19:35:09.095986Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "caseid\n",
+       "1    False\n",
+       "2    False\n",
+       "5    False\n",
+       "6     True\n",
+       "7    False\n",
+       "Name: indus10, dtype: bool"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "banker = (gss['indus10'] == 6870)\n",
+    "banker = gss['indus10'] == 6870\n",
     "banker.head()"
    ]
   },
@@ -197,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.100573Z",
@@ -206,7 +363,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.103159Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "728"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "banker.sum()"
    ]
@@ -222,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.108607Z",
@@ -231,7 +399,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.111310Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014769730168391155"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "banker.mean()"
    ]
@@ -254,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.115436Z",
@@ -279,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.121943Z",
@@ -288,7 +467,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.125312Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014769730168391155"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(banker)"
    ]
@@ -310,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.133453Z",
@@ -333,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.138777Z",
@@ -342,7 +532,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.140543Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5378575776019476"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(female)"
    ]
@@ -379,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.144820Z",
@@ -402,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.150191Z",
@@ -411,7 +612,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.152013Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.27374721038750255"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(liberal)"
    ]
@@ -445,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.156357Z",
@@ -468,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.162885Z",
@@ -477,7 +689,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.165317Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3662609048488537"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(democrat)"
    ]
@@ -498,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.169647Z",
@@ -507,7 +730,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.171252Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014769730168391155"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(banker)"
    ]
@@ -521,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.175131Z",
@@ -530,7 +764,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.177292Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3662609048488537"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(democrat)"
    ]
@@ -544,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.180713Z",
@@ -553,7 +798,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.183516Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004686548995739501"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(banker & democrat)"
    ]
@@ -569,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.187308Z",
@@ -578,7 +834,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.190185Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004686548995739501"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(democrat & banker)"
    ]
@@ -617,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.193582Z",
@@ -640,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.200734Z",
@@ -649,7 +916,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.203214Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5206403320240125"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(selected)"
    ]
@@ -1644,7 +1922,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1658,7 +1936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
