completed chap01 exercises

--- a/notebooks/chap01.ipynb
+++ b/notebooks/chap01.ipynb
@@ -93,15 +93,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloaded gss_bayes.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the data file\n",
     "\n",
@@ -248,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.085579Z",
@@ -333,7 +325,7 @@
        "Name: indus10, dtype: bool"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.100573Z",
@@ -370,7 +362,7 @@
        "728"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.108607Z",
@@ -406,7 +398,7 @@
        "0.014769730168391155"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.115436Z",
@@ -458,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.121943Z",
@@ -474,7 +466,7 @@
        "0.014769730168391155"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.133453Z",
@@ -523,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.138777Z",
@@ -539,7 +531,7 @@
        "0.5378575776019476"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.144820Z",
@@ -603,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.150191Z",
@@ -619,7 +611,7 @@
        "0.27374721038750255"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.156357Z",
@@ -680,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.162885Z",
@@ -696,7 +688,7 @@
        "0.3662609048488537"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.169647Z",
@@ -737,7 +729,7 @@
        "0.014769730168391155"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.175131Z",
@@ -771,7 +763,7 @@
        "0.3662609048488537"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.180713Z",
@@ -805,7 +797,7 @@
        "0.004686548995739501"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.187308Z",
@@ -841,7 +833,7 @@
        "0.004686548995739501"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.193582Z",
@@ -907,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.200734Z",
@@ -923,7 +915,7 @@
        "0.5206403320240125"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.206724Z",
@@ -959,7 +951,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.210120Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7706043956043956"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "selected = female[banker]\n",
     "prob(selected)"
@@ -977,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.213058Z",
@@ -1002,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.218614Z",
@@ -1011,7 +1014,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.221981Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.27581004111500884"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conditional(liberal, given=female)"
    ]
@@ -1040,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.225222Z",
@@ -1049,7 +1063,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.227808Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7706043956043956"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conditional(female, given=banker)"
    ]
@@ -1063,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.231432Z",
@@ -1072,7 +1097,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.235854Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02116102749801969"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conditional(banker, given=female)"
    ]
@@ -1666,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.375687Z",
@@ -1675,14 +1711,26 @@
      "shell.execute_reply": "2021-04-16T19:35:09.378643Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.011381618989653074"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "prob(female & banker)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.383986Z",
@@ -1691,14 +1739,26 @@
      "shell.execute_reply": "2021-04-16T19:35:09.387425Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.002556299452221546"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "prob(female & banker & liberal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.391539Z",
@@ -1707,9 +1767,21 @@
      "shell.execute_reply": "2021-04-16T19:35:09.395740Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0012375735443294787"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "prob(female & banker & liberal & democrat)"
    ]
   },
   {
@@ -1727,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.399461Z",
@@ -1736,14 +1808,26 @@
      "shell.execute_reply": "2021-04-16T19:35:09.403943Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3891320002215698"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "conditional(liberal, given=democrat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.407668Z",
@@ -1752,9 +1836,21 @@
      "shell.execute_reply": "2021-04-16T19:35:09.411604Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5206403320240125"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "conditional(democrat, given=liberal)"
    ]
   },
   {
@@ -1771,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.415701Z",
@@ -1780,7 +1876,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.418810Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19435991073240008"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "young = (gss['age'] < 30)\n",
     "prob(young)"
@@ -1788,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.423028Z",
@@ -1797,7 +1904,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.425960Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17328058429701765"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "old = (gss['age'] >= 65)\n",
     "prob(old)"
@@ -1814,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.429448Z",
@@ -1823,7 +1941,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.432875Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3419354838709677"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conservative = (gss['polviews'] >= 5)\n",
     "prob(conservative)"
@@ -1851,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.436838Z",
@@ -1860,14 +1989,26 @@
      "shell.execute_reply": "2021-04-16T19:35:09.440468Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06579427875836884"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "prob(young & liberal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.443827Z",
@@ -1876,14 +2017,26 @@
      "shell.execute_reply": "2021-04-16T19:35:09.447317Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.338517745302714"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "conditional(liberal, given=young)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.451326Z",
@@ -1892,14 +2045,26 @@
      "shell.execute_reply": "2021-04-16T19:35:09.455085Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06701156421180766"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "prob(old & conservative)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 43,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.458973Z",
@@ -1908,9 +2073,21 @@
      "shell.execute_reply": "2021-04-16T19:35:09.463061Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19597721609113564"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "conditional(old, given=conservative)"
    ]
   },
   {
