--- a/notebooks/ch02.ipynb
+++ b/notebooks/ch02.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "bc68f39b",
    "metadata": {},
    "outputs": [],
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "515f22b7",
    "metadata": {},
    "outputs": [],
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "93417afc",
    "metadata": {},
    "outputs": [],
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "68e66f52",
    "metadata": {},
    "outputs": [],
@@ -886,17 +886,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "423e8451",
    "metadata": {},
    "outputs": [],
    "source": [
-    "child['likelihood'] = 0, Fraction(1,2), Fraction(1,2), Fraction(1,4)"
+    "child['likelihood'] = 0, Fraction(1,2), Fraction(1,2), Fraction(1,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "5ad676d1",
    "metadata": {},
    "outputs": [],
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "af466b74",
    "metadata": {},
    "outputs": [
@@ -950,21 +950,21 @@
        "      <td>1/4</td>\n",
        "      <td>1/2</td>\n",
        "      <td>1/8</td>\n",
-       "      <td>2/5</td>\n",
+       "      <td>1/3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>girlboy</th>\n",
        "      <td>1/4</td>\n",
        "      <td>1/2</td>\n",
        "      <td>1/8</td>\n",
-       "      <td>2/5</td>\n",
+       "      <td>1/3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>girlgirl</th>\n",
        "      <td>1/4</td>\n",
-       "      <td>1/4</td>\n",
-       "      <td>1/16</td>\n",
-       "      <td>1/5</td>\n",
+       "      <td>1/2</td>\n",
+       "      <td>1/8</td>\n",
+       "      <td>1/3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -973,12 +973,12 @@
       "text/plain": [
        "         prior likelihood unnorm posterior\n",
        "boyboy     1/4          0      0         0\n",
-       "boygirl    1/4        1/2    1/8       2/5\n",
-       "girlboy    1/4        1/2    1/8       2/5\n",
-       "girlgirl   1/4        1/4   1/16       1/5"
+       "boygirl    1/4        1/2    1/8       1/3\n",
+       "girlboy    1/4        1/2    1/8       1/3\n",
+       "girlgirl   1/4        1/2    1/8       1/3"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,8 +989,413 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "27118a38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "door2 = pd.DataFrame(index= ['d1', 'd2', 'd3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6e558eff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "door2['prior'] = Fraction(1,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3835a81c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "door2['likelihood'] = Fraction(1,2), 0, Fraction(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c27d1e5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update(door2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "096b1b77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prior</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnorm</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>d1</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/2</td>\n",
+       "      <td>1/6</td>\n",
+       "      <td>1/2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d2</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d3</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/2</td>\n",
+       "      <td>1/6</td>\n",
+       "      <td>1/2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   prior likelihood unnorm posterior\n",
+       "d1   1/3        1/2    1/6       1/2\n",
+       "d2   1/3          0      0         0\n",
+       "d3   1/3        1/2    1/6       1/2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "door2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "81eb7abb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "door2a = pd.DataFrame(index= ['d1', 'd2', 'd3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "45337b65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "door2a['prior'] = Fraction(1,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c7c24caf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "door2a['likelihood'] = Fraction(1,2), 1, 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1981f9de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update(door2a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d9885441",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prior</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnorm</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>d1</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1/2</td>\n",
+       "      <td>1/6</td>\n",
+       "      <td>1/3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d2</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2/3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d3</th>\n",
+       "      <td>1/3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   prior likelihood unnorm posterior\n",
+       "d1   1/3        1/2    1/6       1/3\n",
+       "d2   1/3          1    1/3       2/3\n",
+       "d3   1/3          0      0         0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "door2a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fefbf18e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mms = pd.DataFrame(index= ['bag1', 'bag2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "42674491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mms['prior'] = Fraction(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2a832806",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bag1</th>\n",
+       "      <td>1/2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bag2</th>\n",
+       "      <td>1/2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     prior\n",
+       "bag1   1/2\n",
+       "bag2   1/2"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "dfe2d383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "likelihood is probability of a given scenario within\n",
+    "an exhaustive set of scenarios. in this case, we have\n",
+    "one mm from each bag, one yellow and one green. The\n",
+    "possible scenarios are that the yellow came from the\n",
+    "1994 bag (20 percent) and the green came from 1996\n",
+    "(also, 20 percent), for a combined probability of 4 \n",
+    "percent OR green from bag1 (0.1), yellow from bag2 (0.14).\n",
+    "'''\n",
+    "\n",
+    "mms['likelihood'] = 0.2 * 0.2, 0.14 * 0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "fc209485",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update(mms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "033f7c06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prior</th>\n",
+       "      <th>likelihood</th>\n",
+       "      <th>unnorm</th>\n",
+       "      <th>posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bag1</th>\n",
+       "      <td>1/2</td>\n",
+       "      <td>0.040</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.740741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bag2</th>\n",
+       "      <td>1/2</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>0.007</td>\n",
+       "      <td>0.259259</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     prior  likelihood unnorm posterior\n",
+       "bag1   1/2       0.040   0.02  0.740741\n",
+       "bag2   1/2       0.014  0.007  0.259259"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31ed48ed",
    "metadata": {},
    "outputs": [],
    "source": []
